fix: remove wrap for flex

--- a/ng-ueqt/src/styles/flex/index.scss
+++ b/ng-ueqt/src/styles/flex/index.scss
@@ -2,7 +2,6 @@
     display: flex;
     width: 100%;
     height: 100%;
-    flex-wrap: wrap;
     .u-flex {
         position: relative;
         box-sizing: border-box;
